force-app/main/default/objects/Approver_Matrix__c/Approver_Matrix__c.object-meta.xml
<CustomObject>
    <label>Admom Aprobaciones</label>
    <nameField>
        <label>Nombre Admin Aprobaciones</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admom Aprobaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>