force-app/main/default/objects/Approver_Matrix__c/fields/CESS_Amount__c.field-meta.xml
<CustomField>
    <fullName>CESS_Amount__c</fullName>
    <inlineHelpText>No usar, pendiente incluir dentro de un proceso de aprobación</inlineHelpText>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>