force-app/main/default/objects/Approver_Matrix__c/fields/CESS_Line_Insurance__c.field-meta.xml
<CustomField>
    <fullName>CESS_Line_Insurance__c</fullName>
    <inlineHelpText>No usar, pendiente incluir dentro de un proceso de aprobación</inlineHelpText>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>line_insurance</valueSetName>
    </valueSet>
</CustomField>