force-app/main/default/objects/Approver_Matrix__c/fields/CESS_LossReason__c.field-meta.xml
<CustomField>
    <fullName>CESS_LossReason__c</fullName>
    <label>Motivo de Perdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prima elevada</fullName>
            </value>
            <value>
                <fullName>Contraoferta de su Cía</fullName>
            </value>
            <value>
                <fullName>Cobertura insuficiente</fullName>
            </value>
            <value>
                <fullName>No aceptación del riesgo</fullName>
            </value>
            <value>
                <fullName>Sin decisión / Sin respuesta</fullName>
            </value>
            <value>
                <fullName>Contrata directamente en compañía</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>