force-app/main/default/objects/Approver_Matrix__c/fields/CESS_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>CESS_Source_Type__c</fullName>
    <inlineHelpText>No usar, pendiente incluir dentro de un proceso de aprobación</inlineHelpText>
    <label>Medio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telefono</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>BBDD</fullName>
            </value>
            <value>
                <fullName>BBDD 2</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Corregistros</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>RRSS</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>