force-app/main/default/objects/Approver_Matrix__c/fields/CESS_Stage__c.field-meta.xml
<CustomField>
    <fullName>CESS_Stage__c</fullName>
    <inlineHelpText>No usar, pendiente incluir dentro de un proceso de aprobación</inlineHelpText>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vencimiento Futuro</fullName>
            </value>
            <value>
                <fullName>Cualificación</fullName>
            </value>
            <value>
                <fullName>Propuesta</fullName>
            </value>
            <value>
                <fullName>Contratado</fullName>
            </value>
            <value>
                <fullName>Perdido</fullName>
            </value>
            <value>
                <fullName>Suplemento - Aumento</fullName>
            </value>
            <value>
                <fullName>Suplemento - Disminución</fullName>
            </value>
            <value>
                <fullName>No Realizado</fullName>
            </value>
            <value>
                <fullName>Póliza Anulada</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>Tramitado CIA</fullName>
            </value>
            <value>
                <fullName>Tramitado REC</fullName>
            </value>
            <value>
                <fullName>No procede información</fullName>
            </value>
            <value>
                <fullName>Duplicado Documentación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>