force-app/main/default/objects/Approver_Matrix__c/fields/CESS_Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>CESS_Win_Reason__c</fullName>
    <inlineHelpText>No usar, pendiente incluir dentro de un proceso de aprobación</inlineHelpText>
    <label>Motivo de Ganancia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por garantías del producto</fullName>
            </value>
            <value>
                <fullName>Por precio</fullName>
            </value>
            <value>
                <fullName>Confianza en ECI</fullName>
            </value>
            <value>
                <fullName>Mediación CESS</fullName>
                <isActive>false</isActive>
                <label>Mediación CESS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>