force-app/main/default/objects/Approver_Matrix__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>CESS_OpportunityApprover1__c</columns>
    <columns>CESS_OpportunityApprover2__c</columns>
    <columns>CESS_OpportunityApprover3__c</columns>
    <columns>CESS_OpportunityApprover4__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>